2022-11-06T08:27:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3403583679 # 588
* notice: last 14d: unq all: 2 23
* notice: prev accum: outdated-unq outdated-all / unq all: 385 605 / 397 629
* notice: next accum: outdated-unq outdated-all / unq all: 385 605 / 397 628
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
* notice: removed / changed dates: [] / [2022-10-23]

2022-11-06T02:07:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3402530063 # 587
* notice: last 14d: unq all: 2 24
* notice: prev accum: outdated-unq outdated-all / unq all: 384 603 / 397 628
* notice: next accum: outdated-unq outdated-all / unq all: 385 605 / 397 629
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-22] / []

2022-11-05T16:29:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3400822741 # 586
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 384 603 / 397 629
* notice: next accum: outdated-unq outdated-all / unq all: 384 603 / 397 628
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-22]

2022-11-05T02:03:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3398264639 # 584
* notice: last 14d: unq all: 2 26
* notice: prev accum: outdated-unq outdated-all / unq all: 382 600 / 396 627
* notice: next accum: outdated-unq outdated-all / unq all: 384 603 / 397 629
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-21] / []

2022-11-04T16:32:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3395472741 # 583