@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-06T08:27:08Z",
+  "timestamp" : "2022-11-06T16:30:37Z",
   "count_outdated" : 605,
   "uniques_outdated" : 385,
-  "count" : 628,
+  "count" : 627,
   "uniques" : 397,
   "clones" : [
     {
       "timestamp": "2022-10-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
