@@ -1,3 +1,11 @@
+2022-11-06T16:30:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3405123909 # 589
+* notice: last 14d: unq all: 2 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 385 605 / 397 628
+* notice: next accum: outdated-unq outdated-all / unq all: 385 605 / 397 627
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-10-23]
+
 2022-11-06T08:27:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3403583679 # 588
 * notice: last 14d: unq all: 2 23
